<resources>
    <string name="app_name">Mandarin Assistant</string>
    <string name="app_slogan">Study at every phone unlock</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="proceed">Proceed</string>
    <string name="understood">Understood</string>
    <string name="configure">Configure</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_widgets">Widgets</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="search_hint">Search pinyin, definition, hanzi</string>
    <string name="add_widget_btn">Configure Widget</string>
    <string name="widget_btn_speak">Listen to this word</string>
    <string name="widget_btn_reload">New word</string>
    <string name="app_widget_description"><![CDATA[Display a flashcard of random HSK characters & words.]]></string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="flashcard_widget_configure_section_hsk">Vocabulary list to include</string>
    <string name="add_widget_title">Configure your HSK Flashcard Widget</string>
    <string name="flashcard_widget_configure_toggle_on">%1$s words will now show up on this widget</string>
    <string name="flashcard_widget_configure_toggle_off">%1$s words will no longer show up on this widget</string>
    <string name="flashcard_widget_configure_saved">Widget configuration updated</string>
    <string name="flashcard_widget_configure_empty">Widget NOT updated, select least 1 vocabulary list</string>
    <string name="widget_not_configured">No word.\nClick to configure list(s)</string>
    <string name="widget_default_chinese">你好</string>
    <string name="widget_default_english">Hello</string>
    <string name="widget_default_pinyin">nĭ hăo</string>
    <string name="widget_default_loading">…Loading…</string>
    <string name="widgets_intro"><![CDATA[Welcome to HSK Flashcard Widget!
\n
\nThis app enables you to set up as many widgets on your phone, and select which HSK words you want to see.
We recommend to choose the level your at plus the one below, or above depending on your learning path.
\n
\nYou can come back to this screen at any time to set up a new widget, or reconfigure existing ones.]]></string>
    <string name="widgets_add_widget">Add a new widget</string>
    <string name="about_btn_view_source">View source code</string>
    <string name="widgets_add_widget_instructions">Your launcher does not support automatically adding widgets.\nPlease add the Flashcard widget manually:\nLong press on the home screen → Widgets → Mandarin Assistant.</string>
    <string name="about_intro1">HSK Flashcard Widget (v%1$s) is an open source project by Cyrille Berliat that stems from a personal need to learn Mandarin. \n \nIf it\'s useful to you, please consider supporting me and my countless hours of development :)</string>
    <string name="about_intro2">If you have any suggestions, feedback or issues, feel free to email me.</string>
    <string name="about_intro3">Privacy policy: I use Google Analytics to track usage, such as which tab is visited the most on which device class (Tablet, Smartphone). \nNo Personal Identifiable Information (PII) data should be collected nor sent to me or Google Analytics.
\n
\nLicense: GNU GPLv3. In a nutshell, you can do whatever you want with it, but must display credit for the work and use the same license downstream.
\n
\nThis project uses the awesome projects of:
\n- Full CN-EN from CC-CEDICT list from https://www.mdbg.net/chinese/
\n- HSK list from https://github.com/krmanik/HSK-3.0
\n- Dictionary metadata in Chinese (BETA!) was generated using Yi 1.5 6B - Q6_K LLM from 01.AI.</string>
    <string name="about_btn_email2">Email the developer</string>
    <string name="speech_failure_toast_unknown">Unknown speech error</string>
    <string name="speech_failure_toast_muted">Unmute to hear the word</string>
    <string name="speech_failure_toast_chinese_unsupported">Please install the "Chinese (China)" voice</string>
    <string name="speech_failure_toast_init">Failed to initialized Text-To-Speech</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_annotate">Annotate a word</string>
    <string name="annotation_edit_is_exam_hint">Is it at the exam?</string>
    <string name="annotation_edit_themes_hint">Themes covered:</string>
    <string name="annotation_edit_class_level_hint">Class level:</string>
    <string name="annotation_edit_class_type_hint">Class type:</string>
    <string name="annotation_edit_notes_hint">Enter your notes:</string>
    <string name="annotation_edit_delete_success">%1$s successfully deleted</string>
    <string name="annotation_edit_delete_failure">Couldn\'t delete %1$s: %2$s</string>
    <string name="annotation_edit_save_success">%1$s successfully saved</string>
    <string name="annotation_edit_save_failure">Couldn\'t save %1$s: %2$s</string>
    <string name="annotation_edit_delete_confirm_title">Confirm deletion</string>
    <string name="annotation_edit_delete_confirm_message">Are you sure you want to *delete* this annotation?</string>
    <string name="dictionary_item_favorite">Annotated</string>
    <string name="dictionary_item_hsk">HSK3</string>
    <string name="dictionary_item_lists">Manage lists for this word</string>
    <string name="dictionary_noresult_text">%s not in dictionary, add annotation?</string>
    <string name="dictionary_loading_text">Loading results - standby!\nIf you can read this, consider upgrading your device :)</string>
    <string name="dictionary_noresult_icon">No result!</string>
    <string name="dictionary_search_loading">Loading results</string>
    <string name="dictionary_search_filter_hasannotation_hint"> only</string>
    <string name="menu_ocr">OCR</string>
    <string name="image_capture_button" />
    <string name="appbar_ocr">Start OCR</string>
    <string name="ocr_display_add">Analyze more text and add below</string>
    <string name="ocr_display_loading">Processing your image</string>
    <string name="ocr_display_conf_smaller">Decrease Text Size</string>
    <string name="ocr_display_conf_bigger">Increase Text Size</string>
    <string name="ocr_display_pinyins">Show pinyins</string>
    <string name="ocr_display_analysis_failure">Text Analysis failed - try again</string>
    <string name="ocr_display_separator">Space words</string>
    <string name="dbbackup_success">Successfully backed-up the full database</string>
    <string name="dbbackup_failure_write">Couldn\'t write / back-up the full database</string>
    <string name="dbbackup_failure_folderpermission">No folder allowed to perform local backup, cancelling</string>
    <string name="copied_to_clipboard">Copied %s to clipboard</string>
    <string name="config_backup_title">Backup/Restore from local file</string>
    <string name="config_backup_activate">Activate backup</string>
    <string name="config_backup_frequency">Backup frequency</string>
    <string name="config_backup_frequency_options">When app starts</string>
    <string name="config_backup_location">Backup directory</string>
    <string name="config_backup_directory_choose">Choose directory</string>
    <string name="config_backup_icon_alt">Database upload</string>
    <string name="config_backup_max_number">Number of backups to keep</string>
    <string name="config_backup_select_number">Select how many</string>
    <string-array name="config_backup_max_locally">
        <item>2 (~100MB)</item>
        <item>5 (~250MB)</item>
        <item>10 (~500MB)</item>
    </string-array>
    <string name="about_stats_title">Statistics</string>
    <string name="about_terms_conditions_title"><![CDATA[Privacy Policy & Licences]]></string>
    <string name="about_stats">Loading…</string>
    <string name="about_stats_text">%1$s words in dictionary.\n%2$s annotations.</string>
    <string name="config_restore_file">Restore from file</string>
    <string name="config_restore_file_choose">Choose file</string>
    <string name="config_backup_cloud_title">Backup/Restore from Google</string>
    <string name="config_backup_cloud_account">Google Account</string>
    <string name="config_backup_cloud_account_notconfigured">Logged out</string>
    <string name="config_backup_cloud_lastone">Last successful backup</string>
    <string name="config_backup_cloud_lastone_never">Never</string>
    <string name="config_backup_cloud_backupnow">Backup now</string>
    <string name="config_backup_cloud_restorenow">Restore now</string>
    <string name="dbrestore_failure_fileformat">File doesn\'t seem to be a backup for this app</string>
    <string name="dbrestore_failure_import">Restoration failed: %s</string>
    <string name="dbrestore_failure_nofileselected">No file select: restoration cancelled</string>
    <string name="dbrestore_success">Database successfully restored</string>
    <string name="widget_btn_copy">Copy to clipboard</string>
    <string name="anki_card_CNEN_front"><![CDATA[
        <h1 class="mobile">{{Hanzi}}</h1>

        <br />

        {{tts zh:Hanzi}}
        <div class="metadata">
            <div>{{HSK}} - {{Level}}</div>
        </div>
    ]]></string>
    <string name="anki_card_CNEN_back"><![CDATA[
        <h1 class="mobile">{{Hanzi}}</h1>

        {{Pinyin}}<br />

        {{tts zh:Hanzi}}

        <hr id="answer" />
        {{Definition}}
        {{tts en:Definition}}<br /><br />
        {{Notes}}
        <br /><br />

        <hr id="example" />

        <div class="metadata">
            <div>{{HSK}} - {{Level}}</div>
        </div>
    ]]></string>
    <string name="anki_card_ENCN_front"><![CDATA[
        <h1 class="mobile">&nbsp;</h1>

        <br />

        <hr id="answer" />
        {{Definition}}
        {{tts en:Definition}}<br /><br />
        {{Notes}}

        <div class="metadata">
            <div>{{HSK}} - {{Level}}</div>
        </div>
    ]]></string>
    <string name="menu_ocr_display">OCR: Scanned Text</string>
    <string name="wordlist_create_new_list_button">Create New List</string>
    <string name="wordlist_create_button">Create list</string>
    <string name="wordlist_list_name">List name</string>
    <string name="wordlist_select_lists">Select Lists</string>
    <string name="menu_support">Support the creator!</string>
    <string name="support_devintro_title">🥐 Support the creator 🥐</string>
    <string name="support_devintro">Hello everyone, Cyrille here, I\'m an indie developer originally from France.\n\nAs I learn Chinese, I realized I needed such app and none of the existing ones filled my needs.\n\nSo here we are, I\'m happily sharing for free this creation with you.\n\nIf you also find it useful, please consider participating to my croissant fund, or review it for free!\n\nReviews, feedback, encouragement help tremendously!</string>
    <string name="support_purchase_tier1">Buy the Bronze 🥐 Support tier for US\$1</string>
    <string name="support_purchase_tier2">Buy the Silver 🥐 Support tier for US\$3</string>
    <string name="support_purchase_tier3">Buy the Golden 🥐 Support tier for US\$6</string>
    <string name="support_review_btn">Review the app on Google Play for free</string>
</resources>