<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_dictionary_24dp"
            android:title="@string/menu_dictionary" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/format_list_bulleted_24px"
            android:title="@string/menu_lists" />
        <item
            android:id="@+id/nav_widgets"
            android:icon="@drawable/baseline_widgets_24"
            android:title="@string/menu_widgets" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/settings_24px"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/bakery_dining_24px"
            android:title="@string/menu_support" />
    </group>
</menu>