<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_dictionary">

    <!-- Top-level destinations -->
    <fragment
        android:id="@+id/nav_dictionary"
        android:name="fr.berliat.hskwidget.ui.dictionary.DictionarySearchFragment"
        android:label="@string/menu_dictionary"
        tools:layout="@layout/fragment_dictionary_search">
        <action
            android:id="@+id/annotateWord"
            app:destination="@id/nav_annotate">
            <argument
                android:name="simplifiedWord"
                app:argType="string" />
            <argument
                android:name="newWord"
                app:argType="boolean" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_lists"
        android:name="fr.berliat.hskwidget.ui.wordlist.WordListFragment"
        android:label="@string/menu_lists"
        tools:layout="@layout/fragment_wordlist" />

    <fragment
        android:id="@+id/nav_annotate"
        android:name="fr.berliat.hskwidget.ui.dictionary.AnnotateFragment"
        android:label="@string/menu_dictionary"
        tools:layout="@layout/fragment_annotation_edit" />

    <fragment
        android:id="@+id/nav_config"
        android:name="fr.berliat.hskwidget.ui.config.ConfigFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/nav_ocr_capture"
        android:name="fr.berliat.hskwidget.ui.OCR.CaptureImageFragment"
        android:label="@string/menu_ocr"
        tools:layout="@layout/fragment_ocr_capture">
        <action
            android:id="@+id/displayOCR"
            app:destination="@id/nav_ocr_read">
            <argument
                android:name="imageUri"
                app:argType="string" />
            <argument
                android:name="preText"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_ocr_read"
        android:name="fr.berliat.hskwidget.ui.OCR.DisplayOCRFragment"
        android:label="@string/menu_ocr_display"
        tools:layout="@layout/fragment_ocr_display">
        <action
            android:id="@+id/appendOCR"
            app:destination="@id/nav_ocr_capture">
            <argument
                android:name="preText"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/annotateWord"
            app:destination="@id/nav_annotate">
            <argument
                android:name="simplifiedWord"
                app:argType="string" />
            <argument
                android:name="newWord"
                app:argType="boolean" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_widgets"
        android:name="fr.berliat.hskwidget.ui.widgets.WidgetsListFragment"
        android:label="@string/menu_widgets"
        tools:layout="@layout/fragment_widgets" />

    <fragment
        android:id="@+id/nav_about"
        android:name="fr.berliat.hskwidget.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_support"
        android:name="fr.berliat.hskwidget.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/flashcardFragment"
        android:name="fr.berliat.hskwidget.ui.widget.FlashcardFragment"
        android:label="Flashcard Fragment" />

    <!-- Special global actions (keep these) -->
    <action
        android:id="@+id/configureWidget"
        app:destination="@id/nav_widgets"
        app:popUpTo="@id/mobile_navigation"
        app:popUpToInclusive="false"
        app:popUpToSaveState="true"
        app:launchSingleTop="true"
        app:restoreState="true">
        <argument
            android:name="widgetId"
            app:argType="integer" />
    </action>

    <action
        android:id="@+id/captureOCR"
        app:destination="@id/nav_ocr_capture"
        app:popUpTo="@id/mobile_navigation"
        app:popUpToInclusive="false"
        app:popUpToSaveState="true"
        app:launchSingleTop="true"
        app:restoreState="true">
        <argument
            android:name="preText"
            app:argType="string" />
    </action>

    <action
        android:id="@+id/search"
        app:destination="@id/nav_dictionary"
        app:launchSingleTop="true"
        app:restoreState="true">
        <!-- Query pulled automatically from the search box. -->
    </action>

    <action
        android:id="@+id/ocrImage"
        app:destination="@id/nav_ocr_read">
        <argument
            android:name="imageUri"
            app:argType="string" />
        <argument
            android:name="preText"
            app:argType="string" />
    </action>
</navigation>