<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="fr.berliat.hskwidget.ui.support.SupportViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:text="@string/support_devintro_title"/>

            <TextView
                android:text="@string/support_devintro"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/support_review_btn"
                android:text="@string/support_review_btn"
                android:tag="support_tier1"
                app:icon="@drawable/star_shine_24px"
                android:layout_marginBottom="26dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/totalSpentLabel"
                android:text='@{viewModel.totalSpentText}'
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="24dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:id="@+id/tierIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/bakery_dining_24px" />

                <TextView
                    android:id="@+id/tierLabel"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.supportTier}"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/support_purchase_tier1"
                android:text="@string/support_purchase_tier1"
                android:tag="support_tier1"
                android:backgroundTint="@color/bronze"
                app:icon="@drawable/bakery_dining_24px"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/support_purchase_tier2"
                android:text="@string/support_purchase_tier2"
                android:tag="support_tier2"
                android:backgroundTint="@color/silver"
                app:iconTint="@android:color/black"
                android:textColor="@android:color/black"
                app:icon="@drawable/bakery_dining_24px"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/support_purchase_tier3"
                android:text="@string/support_purchase_tier3"
                android:tag="support_tier3"
                android:backgroundTint="@color/gold"
                app:icon="@drawable/bakery_dining_24px"
                app:iconTint="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </LinearLayout>
    </ScrollView>
</layout>
